# mlops_tec

./: .gitignore  Appendicitis_A01209115-3.ipynb  LICENSE  README.md  mlflow_experiment_a01273366.py  requirements.txt
.dvc/: config
mlops_tarea1/: Makefile  README.md  params.yaml  pyproject.toml  requirements.txt
mlops_tarea1/configs/: dvc.yaml  params.yaml
mlops_tarea1/data/processed/: .gitignore  uci_df.csv  uci_df.csv.dvc  x_test.csv.dvc  x_train.csv.dvc  y_test.csv.dvc  y_train.csv.dvc
mlops_tarea1/data/raw/: .gitignore  features.csv.dvc  targets.csv.dvc  uci_df_raw.csv  uci_df_raw.csv.dvc  variables.csv.dvc
mlops_tarea1/mlruns/0/: meta.yaml
mlops_tarea1/mlruns/0/a3f59ca1d91543ec9b6c950852c7738b/: meta.yaml
mlops_tarea1/mlruns/0/a3f59ca1d91543ec9b6c950852c7738b/tags/: mlflow.runName
mlops_tarea1/mlruns/0/b8d3b99a256c4535896d83d0f84e4cf6/: meta.yaml
mlops_tarea1/mlruns/0/b8d3b99a256c4535896d83d0f84e4cf6/tags/: mlflow.log-model.history  mlflow.runName
mlops_tarea1/models/: .gitignore  appendictis_model.pkl
mlops_tarea1/notebooks/: Appendicitis_A01204055.ipynb  Appendicitis_A01273366.ipynb  Appendicitis_A01283104.ipynb  Appendicitis_A01795595.ipynb  Fase1_Equipo32.ipynb  base.ipynb  mlops_tarea1.ipynb  mlops_tarea1_pipeline.ipynb  mlops_tarea1_refactored.ipynb  refactored.ipynb
mlops_tarea1/reports/: .gitignore
mlops_tarea1/src/: dvc.yaml  load_data.py  mlops_tarea1_pipeline.py  params.yaml  preprocess.py  train.py
mlops_tarea1/src/mlruns/0/2070b069f93142a2a39267345343ec49/: meta.yaml
mlops_tarea4/: README.md  appendictis_model.pkl  main.py  (+1 more)
(+17 files in other folders)
